JP GENERATION - NAVIGATION FIX part 2

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -9,9 +9,10 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/media.css" rel="stylesheet">
     <link href="css/keyframe.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 <!-------------NAV MENU--------------->
@@ -26,7 +27,7 @@
         <a href="#home">Domov</a>
         <div class="dropdown">
             <button class="dropbtn">Portfólio
-                <i class="fa fa-angle-down" aria-hidden="true" id="arrow1"></i>
+                <i aria-hidden="true" class="fa fa-angle-down" id="arrow1"></i>
             </button>
             <div class="dropdown-content">
                 <a href="#photo">Fotky</a>
@@ -35,7 +36,7 @@
         </div>
         <div class="dropdown">
             <button class="dropbtn">Služby
-                <i class="fa fa-angle-down" aria-hidden="true" id="arrow2"></i>
+                <i aria-hidden="true" class="fa fa-angle-down" id="arrow2"></i>
             </button>
             <div class="dropdown-content">
                 <a href="#ser-photo-prod">Foto produkcia</a>
@@ -49,7 +50,7 @@
         </div>
         <div class="dropdown">
             <button class="dropbtn">Cenník
-                <i class="fa fa-angle-down" aria-hidden="true" id="arrow3"></i>
+                <i aria-hidden="true" class="fa fa-angle-down" id="arrow3"></i>
             </button>
             <div class="dropdown-content">
                 <a href="#price-photo-prod">Foto produkcia</a>
@@ -63,7 +64,7 @@
         </div>
         <div class="dropdown">
             <button class="dropbtn">O nás
-                <i class="fa fa-angle-down" aria-hidden="true" id="arrow4"></i>
+                <i aria-hidden="true" class="fa fa-angle-down" id="arrow4"></i>
             </button>
             <div class="dropdown-content">
                 <a href="#about-us">Kto vlastne sme</a>
@@ -104,21 +105,21 @@
 <section class="concept">
     <div class="concept-container">
         <div class="kon-con1">
-            <i id="icon-con1" aria-hidden="true" class="fa fa-paper-plane-o"></i>
+            <i aria-hidden="true" class="fa fa-paper-plane-o" id="icon-con1"></i>
             <h3 class="con-h">Koncept budúcnosti</h3>
             <div class="line-con"></div>
             <p class="con-p">Koncept na mieru ktorý kráča s digitálnou dobou…</p>
         </div>
         <div class="kon-con2">
-            <i id="icon-con2" aria-hidden="true" class="fa fa-globe"></i>
+            <i aria-hidden="true" class="fa fa-globe" id="icon-con2"></i>
             <h3 class="con-h">Veľké nápady</h3>
             <span class="spacer"></span>
             <div class="line-con"></div>
             <p class="con-p">Netrápte sa s tým že nemáte predstavu ako by to malo vyzerať. Vymyslime to za Vás…</p>
         </div>
         <div class="kon-con3">
-            <i id="icon-con3" aria-hidden="true" class="fa fa-lightbulb-o"></i>
-            <h3 class="con-h" >Kreatívne riešenia</h3>
+            <i aria-hidden="true" class="fa fa-lightbulb-o" id="icon-con3"></i>
+            <h3 class="con-h">Kreatívne riešenia</h3>
             <span class="spacer"></span>
             <div class="line-con"></div>
             <p class="con-p">Veľké nápady si žiadajú kreatívne riešenia ktoré Vám poskytneme…</p>
@@ -148,9 +149,10 @@
             <p>Profesionálne fotografie pre Váš e-shop, sociálne siete alebo udalosť na ktorú nechcete zabudnúť…</p>
         </div>
         <div>
-            <i class="fa fa-video-camera" aria-hidden="true"></i>
+            <i aria-hidden="true" class="fa fa-video-camera"></i>
             <h3>Video produkcia</h3>
-            <p>Využívali ste do teraz len free mobilne aplikácie pre Vašú tvorbu? A po nahraní sa Vám zdalo že už to nieje ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>
+            <p>Využívali ste do teraz len free mobilne aplikácie pre Vašú tvorbu? A po nahraní sa Vám zdalo že už to
+                nieje ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-pencil-square-o"></i>
@@ -190,22 +192,22 @@
     </header>
     <section class="photo-galery">
         <div class="pro-img-1">
-            <img src="" alt="">
+            <img alt="" src="">
         </div>
         <div class="pro-img-2">
-            <img src="" alt="">
+            <img alt="" src="">
         </div>
         <div class="pro-img-3">
-            <img src="" alt="">
+            <img alt="" src="">
         </div>
         <div class="pro-img-4">
-            <img src="" alt="">
+            <img alt="" src="">
         </div>
         <div class="pro-img-5">
-            <img src="" alt="">
+            <img alt="" src="">
         </div>
         <div class="pro-img-6">
-            <img src="" alt="">
+            <img alt="" src="">
         </div>
     </section>
 </section>
@@ -396,7 +398,7 @@
 <!--TODO LOGO ZAROVNAT pri MOBILE na STRED a PRI PC TROSKA Z LAVA A MENU NA PRAVO-->
 
 <!--TODO Sroll buttom up -->
-<!--TODO Gallery with filer and gallery prewiev and sroll on image popis AKO NA WORDPRESSE-->
+<!--TODO Gallery with filer and gallery prewiev and sroll on images popis AKO NA WORDPRESSE-->
 
 <!--TODO zivotopis sticky fotka  -->
 <!--TODO Skill bar v % s animaciou-->
