WEB DEVELOPER - GALLERY

--- a/fotogaleria/grid-gallery-responzive/fotogaleria.html
+++ b/fotogaleria/grid-gallery-responzive/fotogaleria.html
@@ -17,33 +17,33 @@
 <!-- Photo Grid -->
 <div class="row">
     <div class="column">
-        <img src="images/cubalibre-rum-post.jpg" alt="skuska" style="width:100%">
-        <img src="images/cubalibre-rum-stories.jpg" alt="skuska" style="width:100%">
-        <img src="images/nozu-hot-post.jpg" alt="skuska" style="width:100%">
-        <img src="images/nozu-hot-stories.jpg" alt="skuska" style="width:100%">
-        <img src="images/cubalibre-rum-post.jpg" alt="skuska" style="width:100%">
-        <img src="images/cubalibre-rum-stories.jpg" alt="skuska" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-post.jpg" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-stories.jpg" style="width:100%">
+        <img alt="skuska" src="images/nozu-hot-post.jpg" style="width:100%">
+        <img alt="skuska" src="images/nozu-hot-stories.jpg" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-post.jpg" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-stories.jpg" style="width:100%">
     </div>
     <div class="column">
-        <img src="images/cubalibre-rum-stories.jpg" alt="skuska" style="width:100%">
-        <img src="images/nozu-hot-post.jpg" alt="skuska" style="width:100%">
-        <img src="images/nozu-hot-stories.jpg" alt="skuska" style="width:100%">
-        <img src="images/cubalibre-rum-post.jpg" alt="skuska" style="width:100%">
-        <img src="images/cubalibre-rum-stories.jpg" alt="skuska" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-stories.jpg" style="width:100%">
+        <img alt="skuska" src="images/nozu-hot-post.jpg" style="width:100%">
+        <img alt="skuska" src="images/nozu-hot-stories.jpg" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-post.jpg" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-stories.jpg" style="width:100%">
     </div>
     <div class="column">
-        <img src="images/cubalibre-rum-post.jpg" alt="skuska" style="width:100%">
-        <img src="images/cubalibre-rum-stories.jpg" alt="skuska" style="width:100%">
-        <img src="images/nozu-hot-post.jpg" alt="skuska" style="width:100%">
-        <img src="images/cubalibre-rum-post.jpg" alt="skuska" style="width:100%">
-        <img src="images/cubalibre-rum-stories.jpg" alt="skuska" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-post.jpg" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-stories.jpg" style="width:100%">
+        <img alt="skuska" src="images/nozu-hot-post.jpg" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-post.jpg" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-stories.jpg" style="width:100%">
     </div>
     <div class="column">
-        <img src="images/cubalibre-rum-post.jpg" alt="skuska" style="width:100%">
-        <img src="images/cubalibre-rum-stories.jpg" alt="skuska" style="width:100%">
-        <img src="images/nozu-hot-stories.jpg" alt="skuska" style="width:100%">
-        <img src="images/cubalibre-rum-post.jpg" alt="skuska" style="width:100%">
-        <img src="images/cubalibre-rum-stories.jpg" alt="skuska" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-post.jpg" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-stories.jpg" style="width:100%">
+        <img alt="skuska" src="images/nozu-hot-stories.jpg" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-post.jpg" style="width:100%">
+        <img alt="skuska" src="images/cubalibre-rum-stories.jpg" style="width:100%">
     </div>
 </div>
 </body>
