--- a/fotogaleria/portfolio-gallery-with-filter/porfolio.html
+++ b/fotogaleria/portfolio-gallery-with-filter/porfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio gallery</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 
@@ -26,21 +26,21 @@
     <div class="row">
         <div class="column nature">
             <div class="content">
-                <img src="images/mountains.jpg" alt="Mountains" style="width:100%">
+                <img alt="Mountains" src="images/mountains.jpg" style="width:100%">
                 <h4>Mountains</h4>
                 <p>Lorem ipsum dolor..</p>
             </div>
         </div>
         <div class="column nature">
             <div class="content">
-                <img src="images/lights.jpg" alt="Lights" style="width:100%">
+                <img alt="Lights" src="images/lights.jpg" style="width:100%">
                 <h4>Lights</h4>
                 <p>Lorem ipsum dolor..</p>
             </div>
         </div>
         <div class="column nature">
             <div class="content">
-                <img src="images/nature.jpg" alt="Nature" style="width:100%">
+                <img alt="Nature" src="images/nature.jpg" style="width:100%">
                 <h4>Forest</h4>
                 <p>Lorem ipsum dolor..</p>
             </div>
@@ -48,21 +48,21 @@
 
         <div class="column cars">
             <div class="content">
-                <img src="images/cars1.jpg" alt="Car" style="width:100%">
+                <img alt="Car" src="images/cars1.jpg" style="width:100%">
                 <h4>Retro</h4>
                 <p>Lorem ipsum dolor..</p>
             </div>
         </div>
         <div class="column cars">
             <div class="content">
-                <img src="images/cars2.jpg" alt="Car" style="width:100%">
+                <img alt="Car" src="images/cars2.jpg" style="width:100%">
                 <h4>Fast</h4>
                 <p>Lorem ipsum dolor..</p>
             </div>
         </div>
         <div class="column cars">
             <div class="content">
-                <img src="images/cars3.jpg" alt="Car" style="width:100%">
+                <img alt="Car" src="images/cars3.jpg" style="width:100%">
                 <h4>Classic</h4>
                 <p>Lorem ipsum dolor..</p>
             </div>
@@ -70,21 +70,21 @@
 
         <div class="column people">
             <div class="content">
-                <img src="images/people1.jpg" alt="Car" style="width:100%">
+                <img alt="Car" src="images/people1.jpg" style="width:100%">
                 <h4>Girl</h4>
                 <p>Lorem ipsum dolor..</p>
             </div>
         </div>
         <div class="column people">
             <div class="content">
-                <img src="images/people2.jpg" alt="Car" style="width:100%">
+                <img alt="Car" src="images/people2.jpg" style="width:100%">
                 <h4>Man</h4>
                 <p>Lorem ipsum dolor..</p>
             </div>
         </div>
         <div class="column people">
             <div class="content">
-                <img src="images/people3.jpg" alt="Car" style="width:100%">
+                <img alt="Car" src="images/people3.jpg" style="width:100%">
                 <h4>Woman</h4>
                 <p>Lorem ipsum dolor..</p>
             </div>
