JP GENERATION - Contetn building

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -18,7 +18,7 @@
 <!-------------NAV MENU--------------->
 <section class="nav-background">
     <div class="topnav" id="myTopnav">
-        <a href="#logo">
+        <a href="#logo" class="logo-jp">
             <img alt="JP GENERATION logo" id="logo" src="image/asset-8-8.png">
         </a>
         <a class="icon" href="javascript:void(0);" onclick="myFunction()">
@@ -46,6 +46,7 @@
                 <a href="#ser-admin-dom-hos">Správa domeny a hostingu</a>
                 <a href="#ser-word-web">Wordpres web</a>
                 <a href="#ser-soc-med">Sociálne média</a>
+                <a href="#ser-dig-stra">Digitálna stratégia</a>
             </div>
         </div>
         <div class="dropdown">
@@ -60,6 +61,7 @@
                 <a href="#price-admin-dom-hos">Správa domeny a hostingu</a>
                 <a href="#price-word-web">Wordpres web</a>
                 <a href="#price-soc-med">Sociálne média</a>
+                <a href="#price-dig-stra">Digitálna stratégia</a>
             </div>
         </div>
         <div class="dropdown">
@@ -77,25 +79,79 @@
 <!-------------PHOTO SLIDER--------------->
 <section class="slider">
     <div class="slideshow-container">
-
+        <!-----------1.-------->
         <div class="mySlides">
-            <img alt="G&T malfy cocktail" class="sliderimg" src="image/menu_portfoli_06.webp">
-            <div class="text">G&T MALFY</div>
+            <img alt="ENCORE the club negroni cocktail" class="sliderimg" src="image/jp-negroni.webp">
+            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
+            <div class="text2">My sme digitálna generácia</div>
         </div>
-
+        <!-----------2.-------->
         <div class="mySlides">
             <img alt="Chivas Regal 15yo and cigar" class="sliderimg" src="image/chivaspromo_portfoli_02.webp">
-            <div class="text">CHIVAS REGAL 15YO & CIGAR PROMO</div>
+            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
+            <div class="text2">My sme digitálna generácia</div>
         </div>
-
+        <!-----------3.-------->
         <div class="mySlides">
             <img alt="halloween shot cocktail" class="sliderimg" src="image/halloween_portfoli_02.webp">
-            <div class="text">HALLOWEEN SHOT COCKTAIL MENU</div>
+            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
+            <div class="text2">My sme digitálna generácia</div>
+        </div>
+        <!-----------4.--------
+        <div class="mySlides">
+            <img alt="halloween martini cocktail" class="sliderimg" src="">
+            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
+            <div class="text2">My sme digitálna generácia</div>
+        </div>
+        <!-----------5.-------->
+        <div class="mySlides">
+            <img alt="halloween shot cocktail" class="sliderimg" src="image/menu_portfoli_06.webp">
+            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
+            <div class="text2">My sme digitálna generácia</div>
+        </div>
+        <!-----------6.-------->
+        <div class="mySlides">
+            <img alt="halloween shot cocktail" class="sliderimg" src="image/menu_portfoli_06.webp">
+            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
+            <div class="text2">My sme digitálna generácia</div>
+        </div>
+        <!-----------7.-------->
+        <div class="mySlides">
+            <img alt="halloween shot cocktail" class="sliderimg" src="image/menu_portfoli_06.webp">
+            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
+            <div class="text2">My sme digitálna generácia</div>
+        </div>
+        <!-----------8.-------->
+        <div class="mySlides">
+            <img alt="halloween shot cocktail" class="sliderimg" src="image/menu_portfoli_06.webp">
+            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
+            <div class="text2">My sme digitálna generácia</div>
+        </div>
+        <!-----------9.-------->
+        <div class="mySlides">
+            <img alt="halloween shot cocktail" class="sliderimg" src="image/menu_portfoli_06.webp">
+            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
+            <div class="text2">My sme digitálna generácia</div>
         </div>
     </div>
     <div class="dot-div">
+        <!-----------1.-------->
         <span class="dot"></span>
+        <!-----------2.-------->
         <span class="dot"></span>
+        <!-----------3.-------->
+        <span class="dot"></span>
+        <!-----------4.-------->
+        <span class="dot"></span>
+        <!-----------5.-------->
+        <span class="dot"></span>
+        <!-----------6.-------->
+        <span class="dot"></span>
+        <!-----------7.-------->
+        <span class="dot"></span>
+        <!-----------8.-------->
+        <span class="dot"></span>
+        <!-----------9.-------->
         <span class="dot"></span>
     </div>
 </section>
@@ -120,7 +176,6 @@
         <div class="kon-con3">
             <i aria-hidden="true" class="fa fa-lightbulb-o" id="icon-con3"></i>
             <h3 class="con-h">Kreatívne riešenia</h3>
-            <span class="spacer"></span>
             <div class="line-con"></div>
             <p class="con-p">Veľké nápady si žiadajú kreatívne riešenia ktoré Vám poskytneme…</p>
         </div>
@@ -130,47 +185,50 @@
 <br>
 <!-------------SERVICES-------------->
 <section class="services">
-    <header class="headline">
-        <div>
-            <div class="line"></div>
-            <div>
-                <h2>Služby</h2>
-            </div>
+    <header class="headline-con">
+        <div class="con-main">
+                <div class="line-con1"></div>
             <div class="spacer"></div>
         </div>
-        <div>
-            <span>MENŠÍ NÁHĽAD ČO VÁM VIEME POSKYTNÚŤ</span>
-        </div>
+        <h2>Služby</h2>
     </header>
+    <div class="con-look">
+        <span>Menší náhľad čo Vám vieme poskytnúť</span>
+    </div>
     <section class="content1">
-        <div>
-            <i aria-hidden="true" class="fa fa-camera"></i>
-            <h3>Foto produkcia</h3>
-            <p>Profesionálne fotografie pre Váš e-shop, sociálne siete alebo udalosť na ktorú nechcete zabudnúť…</p>
-        </div>
-        <div>
-            <i aria-hidden="true" class="fa fa-video-camera"></i>
-            <h3>Video produkcia</h3>
-            <p>Využívali ste do teraz len free mobilne aplikácie pre Vašú tvorbu? A po nahraní sa Vám zdalo že už to
-                nieje ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>
-        </div>
-        <div>
-            <i aria-hidden="true" class="fa fa-pencil-square-o"></i>
-            <h3>Graficky dizajn</h3>
-            <p>Banner, logo, plagát, vizitka, vizualizácia…
-                Všetko čo Vám napadne pod slovo graficky dizajn…</p>
-        </div>
+            <div class="white">
+                <i aria-hidden="true" class="fa fa-camera"></i>
+                <h3>Foto produkcia</h3>
+               <!-- <p>Profesionálne fotografie pre Váš e-shop, sociálne siete alebo udalosť na ktorú nechcete zabudnúť…</p>-->
+            </div>
+            <div id="turquise">
+                <i aria-hidden="true" class="fa fa-video-camera"></i>
+                <h3 class="turquise-bl">Video produkcia</h3>
+                <!--<p>Využívali ste do teraz len free mobilne aplikácie pre Vašú tvorbu? A po nahraní sa Vám zdalo že už to
+                    nieje ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>-->
+            </div>
+            <div class="white">
+                <i aria-hidden="true" class="fa fa-pencil-square-o"></i>
+                <h3>Graficky dizajn</h3>
+                <!--<p>Banner, logo, plagát, vizitka, vizualizácia…
+                    Všetko čo Vám napadne pod slovo graficky dizajn…</p>-->
+            </div>
     </section>
     <section class="content2">
         <div>
             <i aria-hidden="true" class="fa fa-wordpress"></i>
             <h3>WordPress web</h3>
-            <p>Vytvoríme Vám web na mieru bez starostí od blogu až po e-shop… </p>
+           <!-- <p>Vytvoríme Vám web na mieru bez starostí od blogu až po e-shop… </p>-->
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-server"></i>
             <h3>Správa domeny a hostingu</h3>
-            <p>Zaberá Vám správa Vášho e-shopu veľa času? Nechatje to na Nás…</p>
+            <!--<p>Zaberá Vám správa Vášho e-shopu veľa času? Nechatje to na Nás…</p>-->
+        </div>
+        <div>
+            <i class="fa fa-line-chart" aria-hidden="true"></i>
+            <h3>Digitálna stratégia</h3>
+            <!--<p>Každá dobra stratégia potrebuje analýzu ktorú Vám poskytneme…</p>-->
         </div>
     </section>
 </section>
