JP GENERATION - Contetn building - part 2

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -87,53 +87,54 @@
         </div>
         <!-----------2.-------->
         <div class="mySlides">
-            <img alt="Chivas Regal 15yo and cigar" class="sliderimg" src="image/chivaspromo_portfoli_02.webp">
+            <img alt="Chivas Regal 15yo and cigar" class="sliderimg" src="image/chivaspromo-portfoli.webp">
             <div class="text">Kreatívna myseľ, kreatívna praca.</div>
             <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------3.-------->
         <div class="mySlides">
-            <img alt="halloween shot cocktail" class="sliderimg" src="image/halloween_portfoli_02.webp">
+            <img alt="halloween shot cocktail" class="sliderimg" src="image/jp-halloween-portfoli-shot.webp">
             <div class="text">Kreatívna myseľ, kreatívna praca.</div>
             <div class="text2">My sme digitálna generácia</div>
         </div>
-        <!-----------4.--------
+        <!-----------4.-------->
         <div class="mySlides">
-            <img alt="halloween martini cocktail" class="sliderimg" src="">
+            <img alt="halloween martini cocktail" class="sliderimg" src="image/halloween-portfoli.webp">
             <div class="text">Kreatívna myseľ, kreatívna praca.</div>
             <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------5.-------->
         <div class="mySlides">
-            <img alt="halloween shot cocktail" class="sliderimg" src="image/menu_portfoli_06.webp">
+            <img alt="G&T Malfy cocktail mennu" class="sliderimg" src="image/jp-menu-portfoli-malfy.webp">
             <div class="text">Kreatívna myseľ, kreatívna praca.</div>
             <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------6.-------->
         <div class="mySlides">
-            <img alt="halloween shot cocktail" class="sliderimg" src="image/menu_portfoli_06.webp">
+            <img alt="ENCORE the club cocktail card" class="sliderimg" src="image/jp-graphic.webp">
             <div class="text">Kreatívna myseľ, kreatívna praca.</div>
             <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------7.-------->
         <div class="mySlides">
-            <img alt="halloween shot cocktail" class="sliderimg" src="image/menu_portfoli_06.webp">
+            <img alt="Lounge bar peoples" class="sliderimg" src="image/jp-people.webp">
             <div class="text">Kreatívna myseľ, kreatívna praca.</div>
             <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------8.-------->
         <div class="mySlides">
-            <img alt="halloween shot cocktail" class="sliderimg" src="image/menu_portfoli_06.webp">
+            <img alt="Coktail menu QR code design" class="sliderimg" src="image/jp-qrcode.webp">
             <div class="text">Kreatívna myseľ, kreatívna praca.</div>
             <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------9.-------->
         <div class="mySlides">
-            <img alt="halloween shot cocktail" class="sliderimg" src="image/menu_portfoli_06.webp">
+            <img alt="KVADRAT sushi in lounge bar" class="sliderimg" src="image/jp-shushi.webp">
             <div class="text">Kreatívna myseľ, kreatívna praca.</div>
             <div class="text2">My sme digitálna generácia</div>
         </div>
     </div>
+    <br>
     <div class="dot-div">
         <!-----------1.-------->
         <span class="dot"></span>
